DPNG-9791 Replacing credentials put in default server welcome message with names of env variables keeping that values. (#15)
Signed-off-by: Marek Tomczewski <marek.tomczewski@intel.com>

--- a/minio/Dockerfile
+++ b/minio/Dockerfile
@@ -27,6 +27,8 @@ RUN chmod +x /sbin/entrypoint.sh
 WORKDIR /opt/app/
 
 ENV MINIO_STORAGE_PATH "/opt/app/store"
+ENV MINIO_ACCESS_KEY "access_key"
+ENV MINIO_SECRET_KEY "secret_key"
 
 EXPOSE 9000
 
